Change Permissions UI and backend

--- a/frontend/src/main/resources/com/cloudbackend/frontend/File_Viewer.fxml
+++ b/frontend/src/main/resources/com/cloudbackend/frontend/File_Viewer.fxml
@@ -19,7 +19,8 @@
             <Button fx:id="deleteButton" text="Delete" />
             <Button fx:id="createFileButton" text="Create File" />
             <Button fx:id="createDirectoryButton" text="Create Directory" />
-            <Button fx:id="initialize" text="Refresh Tree" />
+            <Button fx:id="initializeButton" text="Refresh Tree" />
+            <Button fx:id="changePermissionsButton" text="Change Permissions" />
         </HBox>
     </bottom>
 </BorderPane>
