uploading file from frontend

--- a/frontend/src/main/resources/com/cloudbackend/frontend/File_Viewer.fxml
+++ b/frontend/src/main/resources/com/cloudbackend/frontend/File_Viewer.fxml
@@ -21,6 +21,8 @@
             <Button fx:id="createDirectoryButton" text="Create Directory" />
             <Button fx:id="initializeButton" text="Refresh Tree" />
             <Button fx:id="changePermissionsButton" text="Change Permissions" />
+            <Button fx:id="uploadFileButton" text="Upload File" />
+
         </HBox>
     </bottom>
 </BorderPane>
