--- a/frontend/src/main/resources/com/cloudbackend/frontend/File_Viewer.fxml
+++ b/frontend/src/main/resources/com/cloudbackend/frontend/File_Viewer.fxml
@@ -22,7 +22,7 @@
             <Button fx:id="initializeButton" text="Refresh Tree" />
             <Button fx:id="changePermissionsButton" text="Change Permissions" />
             <Button fx:id="uploadFileButton" text="Upload File" />
-
+            <Button fx:id="profileButton" text="Profile" />
         </HBox>
     </bottom>
 </BorderPane>
