user management created

--- a/frontend/src/main/resources/com/cloudbackend/frontend/File_Viewer.fxml
+++ b/frontend/src/main/resources/com/cloudbackend/frontend/File_Viewer.fxml
@@ -23,6 +23,7 @@
             <Button fx:id="changePermissionsButton" text="Change Permissions" />
             <Button fx:id="uploadFileButton" text="Upload File" />
             <Button fx:id="profileButton" text="Profile" />
+            <Button fx:id="adminButton" text="Admin" />
         </HBox>
     </bottom>
 </BorderPane>
